vuejs/vuejs-tests/testData/service/volar/importsInCreatedFile/App.vue
<script setup lang="ts">
<weak_warning>import HelloWorld from '@/components/HelloWorld.vue'</weak_warning>
<weak_warning>import incorrect from <error descr="Vue: Cannot find module '@/components/incorrect.vue' or its corresponding type declarations.">'@/components/incorrect.vue'</error></weak_warning>
</script>